--- a/doing.html
+++ b/doing.html
@@ -19,9 +19,16 @@
                 <li> Drink More Water </li>
 
             </ul>
+            
+
+            
 
 
         </div>
+
+        <a href ="index.html"> To Do List </a>
+
+        <a href = "done.html"> Done List </a>
 
 
     </div>
