--- a/done.html
+++ b/done.html
@@ -20,9 +20,15 @@
                 <li> Prepare Supper </li>
 
             </ul>
+            
+      
 
 
         </div>
+
+        <a href ="doing.html"> Doing List </a>
+
+        <a href = "doing.html"> Doing List </a>
 
 
     </div>
