--- a/done.html
+++ b/done.html
@@ -26,7 +26,7 @@
 
         </div>
 
-        <a href ="doing.html"> Doing List </a>
+        <a href ="index.html"> To Do List </a>
 
         <a href = "doing.html"> Doing List </a>
 
